Terraform/launch-template.tf
resource "aws_launch_template" "this" {
  name_prefix   = "eks-node-group"
  image_id      = "ami-070539bda602760db"
  instance_type = var.node_group_instance_type
  # key_name      = "your-key-pair-name"

  user_data = base64encode(templatefile("${path.module}/userdata.tpl", {
    cluster_name = var.cluster_name
    endpoint     = aws_eks_cluster.cluster.endpoint
    cluster_ca   = aws_eks_cluster.cluster.certificate_authority[0].data
  }))
  # user_data = "IyEvYmluL2Jhc2gKc2V0IC1vIHh0cmFjZQovZXRjL2Vrcy9ib290c3RyYXAuc2ggLS1hcGlzZXJ2ZXItZW5kcG9pbnQgJ2h0dHBzOi8vMzU3QzMyQ0EyOEE0OEUwNzM2RTgxQUI4M0Y2ODAwQUEuZ3I3LmV1LXdlc3QtMi5la3MuYW1hem9uYXdzLmNvbScgLS1iNjQtY2x1c3Rlci1jYSAnTFMwdExTMUNSVWRKVGlCRFJWSlVTVVpKUTBGVVJTMHRMUzB0Q2sxSlNVTXZha05EUVdWaFowRjNTVUpCWjBsQ1FVUkJUa0puYTNGb2EybEhPWGN3UWtGUmMwWkJSRUZXVFZKTmQwVlJXVVJXVVZGRVJYZHdjbVJYU213S1kyMDFiR1JIVm5wTlFqUllSRlJKZWsxRVdYZFBSRUUwVFZSQk1VOUdiMWhFVkUxNlRVUlpkMDVVUVRSTlZFRXhUMFp2ZDBaVVJWUk5 [...]
}
